--- a/index.html
+++ b/index.html
@@ -1,9 +1,11 @@
 <!DOCTYPE html>
 <html>
 <head>
-<title>Hello, World!</title>
+<title>Web Programming</title>
 </head>
 <body>
-<p>Hello, World!</p>
+
+<h1>Hello, HTML!</h1>
+
 </body>
 </html>
